@@ -8,6 +8,7 @@
 		<%= "Twitter: " + link_to(user.twitter_url.gsub("http://", ""), user.twitter_url) + "<br />" if !user.twitter_user.blank? %>
 		<%= "Github: " + link_to(user.github_url.gsub("http://", ""), user.github_url) + "<br />" if !user.github_user.blank? %>
 		<%= "Slideshare: " + link_to(user.slideshare_url.gsub("http://", ""), user.slideshare_url) + "<br />" if !user.slideshare_user.blank? %>
+		<%= "Delicious: " + link_to(user.delicious_url.gsub("http://", ""), user.delicious_url) + "<br />" if !user.delicious_user.blank? %>
 		<%= "Projects: " + user.projects.map {|p| "#{link_to(h(p.name), p.url)}"}.join(", ") if user.projects.size > 0 %>
 	</p>
 	<% if admin? %>
