@@ -3,7 +3,9 @@ REXP_EMAIL = /^([^@\s]+)@((?:[-a-z0-9]+\.)+[a-z]{2,})$/i
 REXP_TWITTER_USER = /^([a-z0-9\_])+$/ix
 REXP_GITHUB_USER = /^([a-z0-9\_\-])+$/ix
 REXP_SLIDESHARE_USER = /^([a-z0-9])+$/ix
+REXP_DELICIOUS_USER = /^([a-z0-9\_\-])+$/ix
 
 GITHUB_URL = "http://github.com/"
 TWITTER_URL = "http://twitter.com/"
 SLIDESHARE_URL = "http://slideshare.net/"
+DELICIOUS_URL = "http://del.icio.us/"
