@@ -7,6 +7,7 @@ jaime:
   twitter_user: jaimeiniesta
   github_user: jaimeiniesta
   slideshare_user: jaimeiniesta
+  delicious_user: capitanplaneta
 
 rai:
   id: 2
@@ -17,6 +18,7 @@ rai:
   twitter_user: voodoorai2000
   github_user: voodoorai2000
   slideshare_user: voodoorai2000
+  delicious_user: voodoorai2000
   
 raul:
   id: 3
@@ -27,6 +29,7 @@ raul:
   twitter_user: happywebcoder
   github_user: raul
   slideshare_user: raul
+  delicious_user: raul
   
 javier:
   id: 4
@@ -37,6 +40,7 @@ javier:
   twitter_user: supercoco9
   github_user: javier
   slideshare_user: supercoco9
+  delicious_user: supercoco9
   
 emili:
   id: 5
@@ -47,6 +51,7 @@ emili:
   twitter_user: eparreno
   github_user: eparreno
   slideshare_user: eparreno
+  delicious_user: eparreno
   
 felipe:
   id: 6
@@ -57,6 +62,7 @@ felipe:
   twitter_user: flype
   github_user: flype
   slideshare_user: flype
+  delicious_user: flype
   
 juan:
   id: 7
@@ -67,6 +73,7 @@ juan:
   twitter_user: nickel83
   github_user: nickel
   slideshare_user: nickel
+  delicious_user: nickel
   
 notdeveloper:
   id: 8
